--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   },
   "dependencies": {
     "browserfs": "^1.4.3",
+    "mobx": "^5.0.3",
+    "mobx-react": "^5.2.3",
     "normalize.css": "^8.0.0",
+    "pify": "^3.0.0",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "styled-components": "^3.3.3"
@@ -21,6 +24,7 @@
     "@babel/plugin-syntax-object-rest-spread": "^7.0.0-beta.54",
     "@babel/preset-env": "^7.0.0-beta.54",
     "@babel/preset-react": "^7.0.0-beta.54",
+    "@types/pify": "^3.0.2",
     "@types/react": "^16.4.7",
     "@types/react-dom": "^16.0.6",
     "babel-loader": "^7.1.5",
