--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "browserfs": "^1.4.3",
+    "lodash": "^4.17.10",
     "mobx": "^5.0.3",
     "mobx-react": "^5.2.3",
     "normalize.css": "^8.0.0",
@@ -24,6 +25,7 @@
     "@babel/plugin-syntax-object-rest-spread": "^7.0.0-beta.54",
     "@babel/preset-env": "^7.0.0-beta.54",
     "@babel/preset-react": "^7.0.0-beta.54",
+    "@types/lodash": "^4.14.115",
     "@types/pify": "^3.0.2",
     "@types/react": "^16.4.7",
     "@types/react-dom": "^16.0.6",
