--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "tslint -p ./tsconfig.json -c ./tslint.json -e './node_modules/**/*.ts{,x}' './**/*.ts{,x}'"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.0-14",
+    "@fortawesome/free-solid-svg-icons": "^5.1.0-11",
+    "@fortawesome/react-fontawesome": "^0.1.0-11",
     "browserfs": "^1.4.3",
     "lodash": "^4.17.10",
     "mobx": "^5.0.3",
@@ -29,6 +32,7 @@
     "@types/pify": "^3.0.2",
     "@types/react": "^16.4.7",
     "@types/react-dom": "^16.0.6",
+    "@types/react-fontawesome": "^1.6.3",
     "babel-loader": "^7.1.5",
     "copy-webpack-plugin": "^4.5.2",
     "file-loader": "^1.1.11",
