--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@fortawesome/free-solid-svg-icons": "^5.1.0-11",
     "@fortawesome/react-fontawesome": "^0.1.0-11",
     "browserfs": "^1.4.3",
+    "highlight.js": "^9.12.0",
     "lodash": "^4.17.10",
+    "marked": "^0.4.0",
     "mobx": "^5.0.3",
     "mobx-react": "^5.2.3",
     "normalize.css": "^8.0.0",
@@ -28,7 +30,9 @@
     "@babel/plugin-syntax-object-rest-spread": "^7.0.0-beta.54",
     "@babel/preset-env": "^7.0.0-beta.54",
     "@babel/preset-react": "^7.0.0-beta.54",
+    "@types/highlight.js": "^9.12.3",
     "@types/lodash": "^4.14.115",
+    "@types/marked": "^0.4.0",
     "@types/pify": "^3.0.2",
     "@types/react": "^16.4.7",
     "@types/react-dom": "^16.0.6",
