--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.1.0-11",
     "@fortawesome/react-fontawesome": "^0.1.0-11",
     "browserfs": "^1.4.3",
+    "codemirror": "^5.39.2",
     "highlight.js": "^9.12.0",
     "lodash": "^4.17.10",
     "marked": "^0.4.0",
@@ -30,6 +31,7 @@
     "@babel/plugin-syntax-object-rest-spread": "^7.0.0-beta.54",
     "@babel/preset-env": "^7.0.0-beta.54",
     "@babel/preset-react": "^7.0.0-beta.54",
+    "@types/codemirror": "^0.0.58",
     "@types/highlight.js": "^9.12.3",
     "@types/lodash": "^4.14.115",
     "@types/marked": "^0.4.0",
