--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "typescript": "^2.9.2",
     "webpack": "^4.16.3",
     "webpack-cli": "^3.1.0",
-    "webpack-serve": "^2.0.2"
+    "webpack-serve": "^2.0.2",
+    "workbox-webpack-plugin": "^3.4.1"
   }
 }
