--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "dev": "webpack-serve --no-reload --port 3333",
     "lint": "tslint -p ./tsconfig.json -c ./tslint.json -e './node_modules/**/*.ts{,x}' './**/*.ts{,x}'",
-    "deploy": "webpack && gh-pages -d dist -b master"
+    "build": "rimraf dist && NODE_ENV=production webpack"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.0-14",
@@ -44,6 +44,7 @@
     "babel-loader": "^7.1.5",
     "copy-webpack-plugin": "^4.5.2",
     "file-loader": "^1.1.11",
+    "rimraf": "^2.6.2",
     "style-loader": "^0.21.0",
     "ts-loader": "^4.4.2",
     "typescript": "^2.9.2",
