--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "codemirror": "^5.39.2",
     "gh-pages": "^1.2.0",
     "highlight.js": "^9.12.0",
+    "js-file-download": "^0.4.1",
     "lodash": "^4.17.10",
     "marked": "^0.4.0",
     "mobx": "^5.0.3",
