--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "browserfs": "^1.4.3",
     "codemirror": "^5.39.2",
     "gh-pages": "^1.2.0",
+    "github-markdown-css": "^2.10.0",
     "highlight.js": "^9.12.0",
     "js-file-download": "^0.4.1",
     "lodash": "^4.17.10",
