--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "style-loader": "^0.21.0",
     "ts-loader": "^4.4.2",
     "tslint": "^5.11.0",
+    "tslint-config-standard": "^7.1.0",
     "typescript": "^2.9.2",
     "webpack": "^4.16.3",
     "webpack-cli": "^3.1.0",
