--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "github-markdown-css": "^2.10.0",
     "highlight.js": "^9.12.0",
     "js-file-download": "^0.4.1",
+    "keymaster": "^1.6.2",
     "lodash": "^4.17.10",
     "marked": "^0.4.0",
     "mobx": "^5.0.3",
@@ -37,6 +38,7 @@
     "@babel/preset-react": "^7.0.0-beta.54",
     "@types/codemirror": "^0.0.58",
     "@types/highlight.js": "^9.12.3",
+    "@types/keymaster": "^1.6.28",
     "@types/lodash": "^4.14.115",
     "@types/marked": "^0.4.0",
     "@types/pify": "^3.0.2",
