--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "normalize.css": "^8.0.0",
     "pify": "^3.0.0",
     "react": "^16.4.1",
+    "react-contexify": "^3.0.3",
     "react-dom": "^16.4.1",
     "styled-components": "^3.3.3"
   },
