--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "gh-pages": "^1.2.0",
     "github-markdown-css": "^2.10.0",
     "js-file-download": "^0.4.1",
+    "katex": "^0.10.0-rc",
     "keymaster": "^1.6.2",
     "lodash": "^4.17.10",
     "marked": "^0.4.0",
@@ -39,6 +40,7 @@
     "@babel/preset-react": "^7.0.0-beta.54",
     "@types/codemirror": "^0.0.58",
     "@types/highlight.js": "^9.12.3",
+    "@types/katex": "^0.5.0",
     "@types/keymaster": "^1.6.28",
     "@types/lodash": "^4.14.115",
     "@types/marked": "^0.4.0",
