--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@types/react-fontawesome": "^1.6.3",
     "babel-loader": "^7.1.5",
     "copy-webpack-plugin": "^4.5.2",
+    "file-loader": "^2.0.0",
     "rimraf": "^2.6.2",
     "style-loader": "^0.21.0",
     "ts-loader": "^4.4.2",
