--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
   "scripts": {
     "dev": "webpack-serve --no-reload --port 3333",
     "lint": "tslint -p ./tsconfig.json -c ./tslint.json -e './node_modules/**/*.ts{,x}' './**/*.ts{,x}'",
-    "build": "rimraf dist && NODE_ENV=production webpack"
+    "build": "rimraf dist && NODE_ENV=production webpack",
+    "test": "NODE_ENV=test jest --forceExit -i -c jest.jso",
+    "test:watch": "NODE_ENV=test jest --forceExit -i -c jest.json --watch"
   },
   "dependencies": {
     "browserfs": "^1.4.3",
@@ -37,6 +39,7 @@
     "@babel/preset-react": "^7.0.0-beta.54",
     "@types/codemirror": "^0.0.58",
     "@types/highlight.js": "^9.12.3",
+    "@types/jest": "^23.3.1",
     "@types/katex": "^0.5.0",
     "@types/keymaster": "^1.6.28",
     "@types/lodash": "^4.14.115",
@@ -48,8 +51,10 @@
     "babel-loader": "^7.1.5",
     "copy-webpack-plugin": "^4.5.2",
     "file-loader": "^2.0.0",
+    "jest": "^23.5.0",
     "rimraf": "^2.6.2",
     "style-loader": "^0.21.0",
+    "ts-jest": "^23.1.4",
     "ts-loader": "^4.4.2",
     "tslint": "^5.11.0",
     "tslint-config-standard": "^7.1.0",
