--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "copy-webpack-plugin": "^4.5.2",
     "file-loader": "^2.0.0",
     "jest": "^23.5.0",
+    "jest-localstorage-mock": "^2.2.0",
     "rimraf": "^2.6.2",
     "style-loader": "^0.21.0",
     "ts-jest": "^23.1.4",
