--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "react": "^16.4.1",
     "react-contexify": "^3.0.3",
     "react-dom": "^16.4.1",
+    "remark": "^9.0.0",
+    "remark-react": "^4.0.3",
     "styled-components": "^3.3.3"
   },
   "devDependencies": {
