--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,10 @@
     "preserveConstEnums": true,
     "sourceMap": true,
     "skipLibCheck": true,
+    "typeRoots": [
+      "./node_modules/@types",
+      "./types"
+    ],
     "lib": [
       "dom",
       "es2015",
