--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "react-dom": "^16.4.1",
     "remark": "^9.0.0",
     "remark-react": "^4.0.3",
-    "styled-components": "^3.3.3"
+    "styled-components": "^3.3.3",
+    "tasklist.js": "increments/tasklist.js"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0-beta.54",
