--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-contexify": "^3.0.3",
     "react-dom": "^16.4.1",
     "remark": "^9.0.0",
+    "remark-emoji": "^2.0.1",
     "remark-react": "^4.0.3",
     "styled-components": "^3.3.3",
     "tasklist.js": "increments/tasklist.js"
